2009-05-13  Martin Leidig  <mleidig@schlund.de>

	Additionally log location when logging XSLT error message.

2009-05-08  Martin Leidig  <mleidig@schlund.de>

	Don't copy through action attributes at input elements. This fixes the
	following problem in Opera: Actions didn't work in Opera because it uses 
	the action attribute from the submit button as form action.

2009-05-06  Martin Leidig  <mleidig@schlund.de>

	Fixed NPE when unconfigured page is called with action parameter.

2009-05-06  Martin Leidig  <mleidig@schlund.de>

	Fixed timer problem in SessionCleaner (reset timer after it was
	cancelled due to exception or error thrown by task or JVM).

2009-05-04  Martin Leidig  <mleidig@schlund.de>

	Fixed JMX bean naming in war-mode (use project name from project.xml
	instead of name derived from URI to project.xml to register JMX
	beans).

2009-04-20  Martin Leidig  <mleidig@schlund.de>

	Fixed submit action bug (ignore unknown actions for next page selected
	by pageflow mechanism).

2009-04-02  Martin Leidig  <mleidig@schlund.de>

	Fixed pfx:externalform bug (missing timestamp param).
	* projects/core/xsl/forminput.xsl
	* src/org/pustefixframework/http/dereferer/DerefRequestHandler.java

2009-03-11  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixcore/workflow/context/SessionContextImpl.java:
	catch all exceptions thrown in SessionStatusListeners to ensure that
	SessionAdmin.valueUnbound is called to remove session

2009-03-02  Martin Leidig  <mleidig@schlund.de>

	Fixed force-ssl configuration.

	* src/org/pustefixframework/config/contextxmlservice/parser/SSLParsingHandler.java
	* res/META-INF/org/pustefixframework/config/context-xml-service/parser/context-xml-service-config.xml

2009-03-03  Martin Leidig  <mleidig@schlund.de>

	Return 404 instead of Exception if there's no pagerequest configuration
	and no target for page name.

	* src/org/pustefixframework/http/AbstractPustefixXMLRequestHandler.java