@@ -1,5 +1,12 @@
 2009-05-13  Martin Leidig  <mleidig@schlund.de>
 
+	Improved XSLT stylesheet compilation error handling: Remember
+	TransformerExceptions and add them as TransformerConfigurationException
+	cause to reflect the real problem and not just display the pretty vacant 
+	'Failed to compile stylesheet' message.
+
+2009-05-13  Martin Leidig  <mleidig@schlund.de>
+
 	Additionally log location when logging XSLT error message.
 
 2009-05-08  Martin Leidig  <mleidig@schlund.de>
